--- a/tasks.html
+++ b/tasks.html
@@ -141,6 +141,10 @@
       .profile-strip { padding: 18px 16px; }
       .progress-section, .tasks-section { padding: 16px; }
     }
+
+    .logout-btn { position: absolute; top: 20px; right: 20px; z-index: 2; background: rgba(255,255,255,0.12); border: 1.5px solid rgba(255,255,255,0.25); color: rgba(255,255,255,0.85); font-size: 0.78rem; font-weight: 600; padding: 6px 14px; border-radius: 999px; cursor: pointer; font-family: inherit; display: none; align-items: center; gap: 5px; }
+    .logout-btn:hover { background: rgba(255,255,255,0.22); }
+    .teacher-active .logout-btn { display: flex; }
   </style>
 </head>
 <body>
@@ -162,6 +166,8 @@
 
 <!-- HEADER -->
 <header>
+  
+  <button class="logout-btn" onclick="doLogout()">&#128274; Logout</button>
   <a class="back-btn" href="index.html">← Back</a>
   <div id="headerRight">
     <button class="teacher-btn" onclick="openLogin()">🔑 Teacher</button>
